[package]
name = "git-stack"
description = "Tools for dealing with stacked branches in Git."
authors = ["Barret Rennie <barret@brennie.ca>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/brennie/git-stack"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
git2 = "0.18.1"
owo-colors = "3.5.0"
